--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -255,9 +255,9 @@
             </mat-table>
 
 
-            <div class="mat-table__message" *ngIf="loading">
-                Please wait....
-            </div>
+<!--            <div class="mat-table__message" *ngIf="loading">-->
+<!--                Please wait....-->
+<!--            </div>-->
 
             <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
                 Items per page:
