--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -1,4 +1,4 @@
-<div class="flex" [formGroup]="form">
+<div class="flex" [formGroup]="form" (ngSubmit)="checkZoneValidation()">
 
     <div class="mx-2">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
