--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -42,10 +42,12 @@
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
             <div class="py-2" [formGroup]="searchCnicForm">
-                <div class="w-9/12">
+                <div class="row">
+                    <div class="w-9/12">
                         <app-zone-branch-circle [form]="searchCnicForm" [should_show_circle]="true"
                                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                    </div>
+                </div>
+                </div>
 
             </div>
             <div class="row">
@@ -63,7 +65,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
-                            <mat-select formControlName="Status">
+                            <mat-select (selectionChange)="value($event)" formControlName="Status">
                                 <mat-option *ngFor="let lov of statusLov" [value]="lov.Value">
                                     {{lov.Description}}
                                 </mat-option>
