--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -489,3 +489,10 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
   word-break: break-word;
 
 }
+
+.mat-calendar-table-header{
+   tr {
+    height: auto;
+
+}
+}
