--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -21,7 +21,7 @@
                   <div class="form-group kt-form__group row">
 
                     <div class="w-full">
-                        <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="true"
+                        <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="true" [is_required_circle]="true"
                                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     </div>
 
