--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -2,7 +2,36 @@
      [ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
     <div class="kt-portlet__head kt-portlet__head__custom">
         <div class="kt-portlet__head-label flex">
-            <h3 class=" w-full text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{getTitle()}}</h3>
+
+            <h3 class=" heading w-3/12">{{getTitle()}}</h3>
+            <div class="w-9/12 text-end">
+              <button *ngIf="isEditBtnShown && _currentActivity.U" type="button" class="btn btn-primary"
+              mat-raised-button color="primary" (click)="editCircleFense()"
+              [disabled]="viewLoading || submitted">
+              <mat-icon class="mr-2">edit</mat-icon> Edit
+              </button>
+  
+              <button *ngIf="isDeleteBtnShown && _currentActivity.D" type="button" class=" mx-2 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+              mat-raised-button color="primary" (click)="DeeteCircleFence()"
+              [disabled]="viewLoading || submitted">
+              <mat-icon class="mr-2">delete_forever</mat-icon> Delete
+              </button>
+  
+  
+  
+              <button *ngIf="isClearBtnShown" type="button" class="btn btn-primary" mat-raised-button color="primary"
+              (click)="Clear()" [disabled]="viewLoading || submitted">
+              <mat-icon class="mr-2"> clear_all</mat-icon>Clear
+              </button>
+  
+              <button style="background-color: #01671B;" *ngIf="isSaveBtnShown" type="button" class=" mx-2 btn btn-primary" mat-raised-button
+              color="primary" (click)="onSubmit()" [disabled]="viewLoading || submitted">
+              <mat-icon class="mr-2">save</mat-icon> Save
+              </button>
+              <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md ml-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel" [mat-dialog-close]="false">
+                <mat-icon class="mr-2">cancel</mat-icon> Close
+              </button>
+            </div>
 
         </div>
 
@@ -11,29 +40,7 @@
         <div class="row py-3">
 
           <div class="col-lg-12 col-sm-12 text-right">
-            <button *ngIf="isEditBtnShown && _currentActivity.U" type="button" class="btn btn-primary"
-            mat-raised-button color="primary" (click)="editCircleFense()"
-            [disabled]="viewLoading || submitted">
-            <mat-icon class="mr-2">edit</mat-icon> Edit
-            </button>
 
-            <button *ngIf="isDeleteBtnShown && _currentActivity.D" type="button" class=" mx-2 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-            mat-raised-button color="primary" (click)="DeeteCircleFence()"
-            [disabled]="viewLoading || submitted">
-            <mat-icon class="mr-2">delete_forever</mat-icon> Delete
-            </button>
-
-
-
-            <button *ngIf="isClearBtnShown" type="button" class="btn btn-primary" mat-raised-button color="primary"
-            (click)="Clear()" [disabled]="viewLoading || submitted">
-            <mat-icon class="mr-2"> clear_all</mat-icon>Clear
-            </button>
-
-            <button style="background-color: #01671B;" *ngIf="isSaveBtnShown" type="button" class=" mx-2 btn btn-primary" mat-raised-button
-            color="primary" (click)="onSubmit()" [disabled]="viewLoading || submitted">
-            <mat-icon class="mr-2">save</mat-icon> Save
-            </button>
           </div>
       </div>
 
@@ -61,13 +68,14 @@
                                placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"
                                spellcheck="off" type="text" #search>
 
-                        <agm-map [zoom]="zoom" style="height: 40vh;width: 40vw"
+                        <agm-map [zoom]="zoom" 
                                  [latitude]="lat"
                                  [longitude]="lng"
                                  [mapTypeControlOptions]="controlOptions"
                                  [mapTypeControl]="true"
                                  (mapReady)="onMapReady($event)"
-                                 [restriction]="countryRestriction">
+                                 [restriction]="countryRestriction" 
+                                 style="height: 420px;">
                         </agm-map>
 
                     </div>
@@ -77,9 +85,7 @@
     </form>
     <div class="row pt-3">
       <div class="col-lg-12 text-right">
-        <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md ml-4 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel" [mat-dialog-close]="false">
-        <mat-icon class="mr-2">cancel</mat-icon>Cancel
-      </button>
+
       </div>
     </div>
 </div>
