--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -159,7 +159,7 @@
                   <tr class="table-header-background">
                     <th>Company Name</th>
                     <th>Memorandum Date</th>
-                    <th>reference_no</th>
+                    <th>Reference No.</th>
                     <th></th>
                   </tr>
                 </thead>
@@ -194,7 +194,7 @@
                         <tr class="table-header-background">
                           <th>Company Name</th>
                           <th>Memorandum Date</th>
-                          <th>reference_no</th>
+                          <th>Reference No.</th>
                           <th></th>
 
                         </tr>
