--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -63,7 +63,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Customer Name</mat-label>
-                                <input matInput placeholder="Enter Customer Name" formControlName="CustomerName"
+                                <input matInput placeholder="Enter Customer Name" formControlName="Name"
                                        maxlength="25" autocomplete="off"/>
                             </mat-form-field>
                         </div>
