--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -115,7 +115,7 @@
                    matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
                 <ng-container matColumnDef="CircleCode">
                     <th mat-header-cell *matHeaderCellDef>Circle Code</th>
-                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories.CircleCode}}</td>
+                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.CircleCode}}</td>
                 </ng-container>
 
                 <!-- Number Column -->
