--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="collapse" id="collapseExample">
+    <div class="collapse  in" id="collapseExample">
         <div class="card card-body">
 
 
