--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -113,9 +113,10 @@
                    [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} "
                    class="example-table"
                    matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
-                <ng-container matColumnDef="CircleCode">
+                <!-- CircleCodes Column -->
+                <ng-container matColumnDef="CircleCodes">
                     <th mat-header-cell *matHeaderCellDef>Circle Code</th>
-                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.CircleCode}}</td>
+                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories.CircleCodes}}</td>
                 </ng-container>
 
                 <!-- Number Column -->
