--- a/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
+++ b/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
@@ -1,4 +1,5 @@
-<h3 class="text-3xl  mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Api Log({{RequestResponse.APIName}})</h3>
+<h3 class="text-3xl  mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
+    style="background-color: #f6fcf8;">Api Log({{RequestResponse.APIName}})</h3>
 
 
 <div class="row">
@@ -12,8 +13,12 @@
             </thead>
             <tbody>
             <tr>
-                <td class="text-black w-56"> <div class="w-96 break-words">{{RequestResponse.Request}}</div> </td>
-                <td class="text-black w-56"><div class="w-96 break-words">{{RequestResponse.Response}}</div></td>
+                <td class="text-black w-56" style="vertical-align:text-top">
+                    <div class="w-96 break-words">{{RequestResponse.Request}}</div>
+                </td>
+                <td class="text-black w-56" style="vertical-align:text-top">
+                    <div class="w-96 break-words">{{RequestResponse.Response}}</div>
+                </td>
             </tr>
             </tbody>
         </table>
