--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -62,5 +62,11 @@
             </mat-form-field>
         </div>
     </div>
+
+<!--    <div *ngIf="should_show_working_date" class="mx-2">-->
+<!--        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">-->
+<!--            -->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 
