--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -1,16 +1,17 @@
 <div
     class=" px-10  overflow-scroll sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">List Geo Fencing</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="mt-2   py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon>
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
             </p>
@@ -20,7 +21,7 @@
     <!-- Header -->
 
 
-    <div class="collapse" id="collapseExample">
+    <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <!-- Header -->
             <div [formGroup]="listForm" class="mt-2">
