--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -1,7 +1,6 @@
 <div
     class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
-         style="background-color: #f6fcf8;">{{getTitle()}}</div>
+    <div class="heading">{{getTitle()}}</div>
 
     <!-- Header -->
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
