--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -9,28 +9,17 @@
         dark:bg-transparent
     "
 >
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Search Loan Cases By Cnic</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
-                <button
-                    class="
-                        py-2
-                        mat-focus-indicator
-                        mat-flat-button
-                        mat-button-base
-                        mat-primary
-                    "
-                    type="button"
-                    color="primary"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseExample"
-                    aria-expanded="false"
-                    aria-controls="collapseExample"
-                >
-                    <mat-icon class="mr-2">filter_list</mat-icon>
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
             </p>
@@ -39,7 +28,7 @@
 
     <!-- Header -->
 
-    <div class="collapse" id="collapseExample">
+    <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="py-2" [formGroup]="searchCnicForm">
                 <div class="flex" style="flex-wrap: wrap;">
@@ -80,7 +69,7 @@
 
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                        <button class="mt-2 bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                        <button class="mt-2 bg-gray-500" 
                                 mat-raised-button color="primary" (click)="find()">
                             <mat-icon class="mr-2">search</mat-icon>
                             Find
