journal-voucher filter styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -503,3 +503,10 @@ button[aria-expanded=true] .up {
 button[aria-expanded=false] .down {
   display: none !important;
 }
+
+
+// .collapse{
+//   .card-body{
+//     background-color: #f6fcf8;
+//   }
+// }
