--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -1,13 +1,13 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Journal Voucher</div>
-    <div class="pt-4" [formGroup]="JvForm">
+<div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    <div class="heading">Journal Voucher</div>
+    <div class="pt-3" [formGroup]="JvForm">
+        <div class="flex" style="flex-wrap: wrap;">
 
 
-        <div class="row">
             <app-zone-branch-circle [form]="JvForm" [should_show_circle]="false"
                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-            <div class="col-lg-4 col-sm-12">
-                <div>
+                <div class="mx-2">
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Working Date<strong class="matMandatory">*</strong></mat-label>
@@ -16,12 +16,10 @@
                     </mat-form-field>
                 </div>
             </div>
-        </div>
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Voucher # <strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Voucher No" formControlName="VoucherNo" maxlength="30"
@@ -31,8 +29,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-8/12" appearance="outline">
                         <mat-label class="customMatLabel">Master Code <strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Master Code" formControlName="TransactionMasterID" maxlength="5"
@@ -46,9 +44,8 @@
                            *ngIf="!viewOnly"/>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Effective Date (ddMMyyyy) <strong class="matMandatory">*</strong>
                         </mat-label>
@@ -65,12 +62,11 @@
                 </div>
 
             </div>
-        </div>
 
 
-        <div class="row">
-            <div class="col-lg-2 col-sm-12">
-                <div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>GL Head <strong class="matMandatory">*</strong></mat-label>
                         <mat-select formControlName="GlHead" [disabled]="recoverySaved || transactionEdit || viewOnly">
@@ -84,9 +80,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-2 col-sm-12">
-
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel"></mat-label>
                         <input matInput placeholder="" formControlName="GlSubID" maxlength="4" autocomplete="off"
@@ -95,16 +90,16 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel"></mat-label>
                         <input matInput placeholder="" formControlName="GlSub" [readonly]="gubSub"/>
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Total Amount <strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Total Amount" formControlName="Amount" maxlength="14"
@@ -118,8 +113,8 @@
                 </div>
             </div>
 
-            <div class="col-lg-2 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Tr Code <strong class="matMandatory">*</strong></mat-label>
                         <input matInput placeholder="Tr Code" formControlName="TrCode" maxlength="3" autocomplete="off"
@@ -129,12 +124,11 @@
 
                 </div>
             </div>
-        </div>
 
 
-        <div class="row">
-            <div class="col-lg-3 col-sm-12">
-                <div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>RO</mat-label>
                         <mat-select formControlName="RoCode" [disabled]="recoverySaved || transactionEdit || viewOnly">
@@ -147,8 +141,8 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Advice #</mat-label>
                         <input matInput placeholder="Advice No" formControlName="AdviceNo" maxlength="30" autocomplete="off"
@@ -160,8 +154,8 @@
                 <!-- <strong class="matMandatory">*</strong> -->
             </div>
 
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Contra Branch Code</mat-label>
                         <input matInput placeholder="Contra Branch Code" formControlName="ContraBranchCode" maxlength="6"
@@ -171,8 +165,8 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid  w-8/12" appearance="outline">
                         <mat-label class="customMatLabel">Dept Code</mat-label>
                         <input matInput placeholder="Dept Code" formControlName="OrgDeptID" maxlength="6" autocomplete="off"
@@ -186,11 +180,8 @@
                 </div>
             </div>
 
-        </div>
-
-        <div class="row">
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid  w-8/12" appearance="outline">
                         <mat-label class="customMatLabel">LC #</mat-label>
                         <input matInput placeholder="LC No" (keyup)="changed($event)" formControlName="LoanCaseID"
@@ -204,9 +195,9 @@
                            [readonly]="recoverySaved || transactionEdit" *ngIf="!viewOnly"/>
                 </div>
             </div>
-            <div class="col-lg-5 col-sm-12">
-                <div class="mx-4">
-                    <mat-form-field *ngIf="!expandDisbursement" class="mat-form-field-fluid" appearance="outline">
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field *ngIf="!expandDisbursement" class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Disbursement/LC GL</mat-label>
                         <mat-select formControlName="LoanDisbID" [disabled]="recoverySaved || transactionEdit || viewOnly">
                             <mat-option *ngFor="let list of DisbursementGLList" [value]="list.LoanDisbID">
@@ -215,7 +206,11 @@
                         </mat-select>
                         <!-- <mat-error *ngIf="hasError('LoanDisbID', 'required')">Disbursement ID <strong>required</strong></mat-error> -->
                     </mat-form-field>
-
+            
+            </div>
+                </div>
+                <div class="mx-2 mt-4">
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field *ngIf="expandDisbursement" class="mat-form-field-fluid w-11/12" appearance="outline">
                         <mat-label>Disbursement/LC GL</mat-label>
                         <mat-select formControlName="LoanDisbID" [disabled]="recoverySaved || transactionEdit || viewOnly">
@@ -229,8 +224,8 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Account No</mat-label>
                         <input matInput placeholder="Account No" formControlName="DepositAccID" maxlength="14"
@@ -239,14 +234,13 @@
                     </mat-form-field>
                 </div>
             </div>
-        </div>
 
 
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Contra Voucher #</mat-label>
                         <input matInput placeholder="Contra Voucher No" formControlName="ContraVoucherNo" maxlength="14"
@@ -255,8 +249,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Rec #</mat-label>
                         <input matInput placeholder="Record No" formControlName="RecordNo" maxlength="7" autocomplete="off"
@@ -265,9 +259,8 @@
                     </mat-form-field>
                 </div>
             </div>
-
-            <div class="col-lg-4 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">CA Code</mat-label>
                         <input matInput placeholder="CA Code" formControlName="CaCode" maxlength="7" autocomplete="off"
@@ -276,12 +269,8 @@
                     </mat-form-field>
                 </div>
             </div>
-        </div>
-
-
-        <div class="row">
-
-            <div class="col-lg-3 col-sm-12">
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                 <div *ngIf="showInstrument">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Instrument Type</mat-label>
@@ -295,7 +284,9 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
+            </div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                 <div *ngIf="showInstrument">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel"></mat-label>
@@ -305,8 +296,9 @@
                     </mat-form-field>
                 </div>
             </div>
-
-            <div class="col-lg-3 col-sm-12">
+</div>
+<div class="mx-2">
+    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                 <div *ngIf="showInstrument">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel"></mat-label>
@@ -316,8 +308,9 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            </div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">PP No</mat-label>
                         <input matInput placeholder="" formControlName="EmpPPNo" maxlength="8" autocomplete="off"
@@ -327,11 +320,10 @@
                 </div>
             </div>
 
-        </div>
 
-        <div class="row">
-            <div class="col-lg-6 col-sm-12">
-                <div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Note:</mat-label>
                         <input matInput placeholder="Note" formControlName="Note" autocomplete="off" [disabled]="!viewOnly"
@@ -341,8 +333,8 @@
                 </div>
 
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">SAM LC</mat-label>
                         <input matInput placeholder="" formControlName="Samlc" maxlength="6" autocomplete="off"
@@ -350,8 +342,8 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">SAM GL</mat-label>
                         <input matInput placeholder="SAM GL" formControlName="Glsam" maxlength="4" autocomplete="off"
@@ -361,11 +353,10 @@
                 </div>
             </div>
 
-        </div>
 
-        <div class="row">
-            <div class="col-lg-6 col-sm-12">
-                <div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Remarks:</mat-label>
                         <input maxlength="200" matInput placeholder="Remarks" formControlName="Remarks" autocomplete="off"
@@ -374,12 +365,11 @@
                     <!-- <mat-error *ngIf="remarksError">Remarks <strong>required</strong></mat-error> -->
                 </div>
             </div>
-        </div>
 
 
 
 
-
+</div>
 
 
         <!-- <div  class="">
