--- a/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
+++ b/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
@@ -2,14 +2,18 @@
 
 
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Pending Transactions</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                    Advance Filter
                 </button>
               </p>
         </div>
@@ -19,7 +23,7 @@
 
 
 
-      <div class="collapse" id="collapseExample">
+      <div class="collapse show" id="collapseExample">
         <div class="card card-body">
     <!-- Header -->
     <div [formGroup]="pendingForm">
@@ -88,7 +92,7 @@
             <div class="mx-2">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-                    <button class="bg-gray-500 mt-2" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary"
+                    <button class="bg-gray-500 mt-2"  mat-raised-button color="primary"
                             type="button" (click)="find()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
