--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -65,8 +65,16 @@
 
 <!--    <div *ngIf="should_show_working_date" class="mx-2">-->
 <!--        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">-->
-<!--            -->
+<!--            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                <mat-label class="customMatLabel">Working Date (ddMMyyyy) <strong class="matMandatory">*</strong>-->
+<!--                </mat-label>-->
+<!--                <input matInput [matDatepicker]="picker2" formControlName="WorkingDate" maxlength="30"-->
+<!--                       autocomplete="off" (dateChange)="isEnableWorkingDate()" appNumberOnly/>-->
+<!--                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>-->
+<!--                <mat-datepicker #picker2></mat-datepicker>-->
+<!--            </mat-form-field>-->
 <!--        </div>-->
 <!--    </div>-->
+
 </div>
 
