--- a/src/app/shared/component/view-map/view-map.component.html
+++ b/src/app/shared/component/view-map/view-map.component.html
@@ -16,8 +16,8 @@
 
     <agm-map #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng"
              [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true" (mapReady)="onMapReady($event)"
-             style="height: 420px">
-        <div *ngIf="loc_arr?.length!=0">
+             style="height: 600px">
+        <div *ngIf="loc_arr?.length>0">
             <agm-marker *ngFor="let coordinate of loc_arr; let i=index"
                         [latitude]="isNumber(coordinate.Lat)"
                         [longitude]="isNumber(coordinate.Lng)" [agmFitBounds]="true">
