--- a/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
+++ b/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
@@ -45,8 +45,8 @@
 
 
         <div class="row">
-            <div class="col-lg-3 col-sm-12">
-                <div *ngIf="circle?.length>0" class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+            <div class="col-lg-3 col-sm-12" *ngIf="circle?.length>0">
+                <div  class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Circle No</mat-label>
                         <mat-select  [disabled]='isView' formControlName="CircleId">
@@ -61,7 +61,7 @@
                     </div>
             </div>
             <div class="col-lg-3 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong></mat-label>
                         <input disabled matInput [matDatepicker]="picker" formControlName="VisitedDate"  autocomplete="off" (dateChange)="setVisitedDate()" [min]="minDate"  />
