--- a/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
+++ b/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
@@ -1,14 +1,18 @@
 <div class="px-10 absolute inset-0 flex flex-col min-w-0 overflow-y-scroll bg-white" cdkScrollable>
 
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Document Type List</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class=" mt-2 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                    Advance Filter
                 </button>
               </p>
         </div>
@@ -18,14 +22,14 @@
 
 
 
-      <div class="collapse" id="collapseExample">
+      <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="row">
                 <div class="col-lg-3 col-sm-12">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
                                maxlength="30" autocomplete="off">
-                        <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
+                        <!-- <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint> -->
                     </mat-form-field>
                 </div>
                 <div class="col-lg-3 col-sm-12">
