--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -1,17 +1,18 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
-  <div class="row py-3">
+  <div class="row pt-3">
     <div class="col-lg-9 col-sm-12">
         <div class="heading">Utilization List</div>
     </div>
     <div class="col-lg-3 col-sm-12 self-center">
         <p class="text-right">
-            <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                    color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                    aria-expanded="false" aria-controls="collapseExample">
-                <mat-icon class="mr-2">filter_list</mat-icon>
-                Advance Filter
-            </button>
+          <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+          color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+          aria-expanded="false" aria-controls="collapseExample">
+              <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+              <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+              Advance Filter
+          </button>
         </p>
     </div>
 </div>
@@ -19,11 +20,11 @@
 <!-- Header -->
 
 
-<div class="collapse" id="collapseExample">
+<div class="collapse show" id="collapseExample">
     <div class="card card-body">
       <div class="flex" style="flex-wrap: wrap;">
           <app-zone-branch-circle [form]="utilizationSearch" [should_show_circle]="false"
-                                  (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
         <div class="mx-2" >
           <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
@@ -53,8 +54,7 @@
          </div>
          <div class="mx-2" >
           <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-          <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
-          aria-expanded="false" (click)="searchloanutilization()" class="bg-gray-500" mat-flat-button [color]="'primary'">
+          <button  (click)="searchloanutilization()" class="bg-gray-500" mat-flat-button [color]="'primary'">
             <mat-icon class="mr-2">search</mat-icon> Search
           </button>
         </div>
