--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -3,14 +3,18 @@
 
 
 
-        <div class="row py-3">
+        <div class="row pt-3">
             <div class="col-lg-9 col-sm-12">
                 <div class="heading">NDC Search List</div>
             </div>
             <div class="col-lg-3 col-sm-12 self-center">
                 <p class="text-right">
-                    <button class=" mt-2 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                    <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                    color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                    aria-expanded="false" aria-controls="collapseExample">
+                        <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                        <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                        Advance Filter
                     </button>
                   </p>
             </div>
@@ -20,7 +24,7 @@
 
 
 
-          <div class="collapse" id="collapseExample">
+          <div class="collapse show" id="collapseExample">
             <div class="card card-body">
         <!-- Header -->
         <form [formGroup]="ndcForm">
@@ -30,28 +34,31 @@
             <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
               Please enter valid Input
             </kt-alert> -->
-            <div class="row">
+            <div class="flex" style="flex-wrap: wrap;">
 
 
                 <app-zone-branch-circle [form]="ndcForm" [should_show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
-
-                <div class="col-lg-3 ">
+                <div class="mx-2" >
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Cnic</mat-label>
                         <input matInput placeholder="Enter Cnic" formControlName="Cnic" appNumberOnly maxlength="13"
                                autocomplete="off"/>
                     </mat-form-field>
                 </div>
-                <div class="col-lg-3 col-sm-12 ">
-                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="findCnic()"
+                </div>
+                <div class="mx-2" >
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <button  class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="findCnic()"
                             color="primary" type="button">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
                     </button>
-                    <span class="cursor-pointer mx-4" id="llcInquiryText" (click)="refresh()"><b
-                        class="-mt-4">Get All</b></span>
+                    <span class="cursor-pointer mt-2  mx-4" id="llcInquiryText" (click)="refresh()"><b
+                        class="-mt-4 text-green">Get All</b></span>
+                </div>
                 </div>
 
 
